schematic-abcde/istio/kube/routing/abcde-routing-default.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: a
spec:
  hosts:
  - "*"
  gateways:
  - a-gateway
  http:
  - match:
    - uri:
        exact: /a1
    - uri:
        exact: /a2
    route:
    - destination:
        host: a
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: a
spec:
  hosts:
  - a
  gateways:
  - a
  http:
  - route:
    - destination:
        host: a
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: b
spec:
  hosts:
  - b
  http:
  - route:
    - destination:
        host: b
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: c
spec:
  hosts:
  - c
  http:
  - route:
    - destination:
        host: c
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: d
spec:
  hosts:
  - d
  http:
  - route:
    - destination:
        host: d
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: e
spec:
  hosts:
  - e
  http:
  - route:
    - destination:
        host: e
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: a
spec:
  host: a
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: b
spec:
  host: b
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: c
spec:
  host: c
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: d
spec:
  host: d
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: e
spec:
  host: e
